--- a/licenses/resolve_missing.properties
+++ b/licenses/resolve_missing.properties
@@ -50,7 +50,7 @@
 # Please fill the missing licenses for dependencies :
 #
 #
-#Fri Apr 07 10:34:04 CEST 2023
-openchart--openchart--1.4.2=
+#Fri Apr 07 10:41:30 CEST 2023
+openchart--openchart--1.4.2=GNU LESSER GENERAL PUBLIC LICENSE 2.1
 java3d--vecmath--1.3.1=GNU General Public License version 2
 org.biojava.thirdparty--forester--1.039=The GNU Lesser General Public License, Version 2.1
