--- a/.github/workflows/publish_conda.yml
+++ b/.github/workflows/publish_conda.yml
@@ -3,8 +3,7 @@ name: 'Publish Conda Package'
 on:
   push:
     tags:
-      #TODO: temove 'todo_reactivate_'
-      - todo_reactivate_v[0-9]+.[0-9]+.[0-9]+
+      - v[0-9]+.[0-9]+.[0-9]+
 
 env:
   ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
@@ -41,6 +40,37 @@ jobs:
       run: |
         conda config --set anaconda_upload yes
         conda build -c conda-forge  .
+      env:
+        DENOPTIM_VERSION: ${{ steps.get_version.outputs.VERSION }}
+
+  build-and-publish-noarch:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -l {0}
+
+    steps:
+    - name: Checkout repo
+      uses: actions/checkout@master
+
+    - name: Get version identifier
+      id: get_version
+      run: |
+        echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/v}
+        echo ${GITHUB_REF#refs/tags/v}
+
+    - name: Setup Miniconda
+      uses: conda-incubator/setup-miniconda@v2
+      with:
+        auto-update-conda: true
+        auto-activate-base: false
+        activate-environment: anaconda-client-env
+        environment-file: conda/environment.yml
+
+    - name: Build package and publish
+      run: |
+        conda config --set anaconda_upload yes
+        conda build -c conda-forge  .  --variants "{'arch': 'noarch'}"
       env:
         DENOPTIM_VERSION: ${{ steps.get_version.outputs.VERSION }}
 
