--- a/.github/workflows/publish_conda.yml
+++ b/.github/workflows/publish_conda.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Get version identifier
       id: get_version
       run: |
-        echo VERSION::${GITHUB_REF#refs/tags/v} >> $GITHUB_OUTPUT
+        echo VERSION=${GITHUB_REF#refs/tags/v} >> $GITHUB_OUTPUT
         echo ${GITHUB_REF#refs/tags/v}
 
     - name: Setup Miniconda
@@ -56,7 +56,7 @@ jobs:
     - name: Get version identifier
       id: get_version
       run: |
-        echo VERSION::${GITHUB_REF#refs/tags/v} >> $GITHUB_OUTPUT
+        echo VERSION=${GITHUB_REF#refs/tags/v} >> $GITHUB_OUTPUT
         echo ${GITHUB_REF#refs/tags/v}
 
     - name: Setup Miniconda
