--- a/.github/workflows/publish_conda.yml
+++ b/.github/workflows/publish_conda.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-13, macos-latest, windows-latest]
     defaults:
       run:
         shell: bash -l {0}
@@ -31,6 +31,7 @@ jobs:
     - name: Setup Miniconda
       uses: conda-incubator/setup-miniconda@v3.1.0
       with:
+        miniconda-version: "latest"
         auto-update-conda: true
         auto-activate-base: false
         activate-environment: anaconda-client-env
