--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <artifactId>denoptim</artifactId>
 
 
-  <version>4.3.0</version>
+  <version>4.4.0</version>
   <!-- WARNING: the vesion must be changes also in doc/user_manual.md-->
 
   <name>denoptim</name>
@@ -31,13 +31,13 @@
     <dependency>
         <artifactId>cdk-bundle</artifactId>
         <groupId>org.openscience.cdk</groupId>
-        <version>2.9</version>
+        <version>2.11</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
     <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
-        <version>2.17.0</version>
+        <version>2.19.0</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
     <dependency>
@@ -55,13 +55,13 @@
     <dependency>
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
-        <version>2.11.0</version>
+        <version>2.13.1</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
     <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>33.3.1-jre</version>
+        <version>33.4.8-jre</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.jfree/jfreechart -->
     <dependency>
@@ -109,35 +109,35 @@
     <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter</artifactId>
-        <version>5.11.3</version>
+        <version>5.13.0-M2</version>
         <scope>test</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
     <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-api</artifactId>
-        <version>5.11.3</version>
+        <version>5.13.0-M2</version>
         <scope>test</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
     <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-engine</artifactId>
-        <version>5.11.3</version>
+        <version>5.13.0-M2</version>
         <scope>test</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-migrationsupport -->
     <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-migrationsupport</artifactId>
-        <version>5.11.3</version>
+        <version>5.13.0-M2</version>
         <scope>test</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
     <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-params</artifactId>
-        <version>5.11.3</version>
+        <version>5.13.0-M2</version>
         <scope>test</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/javax.vecmath/vecmath -->
@@ -150,7 +150,7 @@
     <dependency>
         <groupId>jakarta.el</groupId>
         <artifactId>jakarta.el-api</artifactId>
-        <version>5.0.1</version>
+        <version>6.0.1</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.glassfish/jakarta.el -->
     <dependency>
@@ -162,7 +162,7 @@
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-core</artifactId>
-        <version>6.1.14</version>
+        <version>6.2.7</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/com.github.dpaukov/combinatoricslib3 -->
     <dependency>
@@ -174,25 +174,25 @@
     <dependency>
         <groupId>org.biojava</groupId>
         <artifactId>biojava-core</artifactId>
-        <version>7.1.3</version>
+        <version>7.2.2</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.biojava/biojava-structure -->
     <dependency>
         <groupId>org.biojava</groupId>
         <artifactId>biojava-structure</artifactId>
-        <version>7.1.3</version>
+        <version>7.2.2</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.apache.xmlgraphics/batik-swing -->
     <dependency>
         <groupId>org.apache.xmlgraphics</groupId>
         <artifactId>batik-swing</artifactId>
-        <version>1.18</version>
+        <version>1.19</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/net.sf.py4j/py4j -->
     <dependency>
         <groupId>net.sf.py4j</groupId>
         <artifactId>py4j</artifactId>
-        <version>0.10.9.7</version>
+        <version>0.10.9.9</version>
     </dependency>
   </dependencies>
   
@@ -208,23 +208,12 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>license-maven-plugin</artifactId>
         <version>2.4.0</version>
-        <executions>
-          <execution>
-            <phase>compile</phase>
-            <goals>
-              <goal>add-third-party</goal>
-              <goal>download-licenses</goal>
-            </goals>
-          </execution>
-        </executions>
         <configuration>
-          <verbose>false</verbose>
           <outputDirectory>licenses</outputDirectory>
           <missingFile>licenses/resolve_missing.properties</missingFile>
           <useMissingFile>true</useMissingFile>
           <licensesConfigFile>licenses/manually_configured_licenses.xml</licensesConfigFile>
-          <licensesOutputDirectory>licenses/dependencies</licensesOutputDirectory>
-          <cleanLicensesOutputDirectory>true</cleanLicensesOutputDirectory>
+          <licensesOutputDirectory>licenses/license_files</licensesOutputDirectory>
         </configuration>
       </plugin>
       <plugin>
@@ -235,14 +224,14 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <source>11</source>
-          <target>11</target>
+          <source>17</source>
+          <target>17</target>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M3</version>
+        <version>3.5.3</version>
       </plugin>
 
       <!-- Maven Shade Plugin to rename CLI dependencies that otherwise clash at runtime-->
