--- a/.github/workflows/publish_conda.yml
+++ b/.github/workflows/publish_conda.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ windows-latest]
+        os: [ubuntu-latest, macos-13, macos-latest, windows-latest]
     defaults:
       run:
         shell: bash -l {0}
